--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: Outfit;
   box-sizing: border-box;
 }
 
@@ -11,4 +14,9 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.app {
+  width: 85%;
+  margin: auto;
 }
