--- a/src/components/FoodItem/FoodItem.css
+++ b/src/components/FoodItem/FoodItem.css
@@ -29,9 +29,26 @@
   color: tomato;
   font-size: 22px;
 }
-.food-item-count button {
-  font-size: 1.5vw;
-  padding: 2px 12px;
-  border: none;
-  background-color: tomato;
+.food-item-image-container {
+  position: relative;
+}
+.food-item-image-container .add-image {
+  width: 25px;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.food-item-counter {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 10px;
+  padding: 6px;
+  border-radius: 50px;
+  background-color: white;
 }
