--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,3 +33,20 @@
   /* color: black; */
   cursor: pointer;
 }
+@media (max-width: 1050px) {
+
+  .header-content {
+    max-width: 45%;
+  }
+}
+@media (max-width: 750px) {
+  .header-content {
+    max-width: 65%;
+  }
+  .header-content p {
+    display: none;
+  }
+  .header-content button {
+    padding: 2vw 4vw;
+  }
+}
